# ARM_Project---Learning

./: .gitignore  ARM_Project.code-workspace  CMakeLists.txt  README.md
mcu/ATSAMC21N18A/Notes/: Peripheral Function Multiplexed Signals.txt
mcu/ATSAMC21N18A/start_up/: system_samc21.c
src/: main.c
src/tests/led_button/: led_button.c  led_button.h
src/tests/timer_blink/: timer_blink.c  timer_blink.h
src/tests/usart_serial/: usart.c  usart.h
tools/scripts/Utilities/Size/: Build.ps1  PrettySize.csproj  Program.cs
